# T-DT_Radar_rz

./: .env  .gitignore  LICENSE  README.md
.github/instructions/: chat.instructions.md
config/: RM2025_Points.yaml  camera_params.yaml  detect_params.yaml  launch_params.yaml  out_matrix.yaml
docker/: Dockerfile.base  README.md  compose.dev.yml  compose.snapshot.yml
scripts/: quick_build.sh  stop_launch.sh  unlock_workspace.sh
src/fusion/debug_map/: debug_map.cpp
src/fusion/kalman_filter/include/: filter_plus.h  kalman_filter.h
src/fusion/kalman_filter/src/: kalman_filter.cpp
src/interface/base_interface/: CMakeLists.txt  package.xml
src/interface/base_interface/msg/: Polar3f.msg
src/interface/vision_interface/: package.xml
src/lidar/cluster/include/: cluster.h
src/lidar/cluster/src/: cluster.cpp
src/lidar/dynamic_cloud/include/: dynamic_cloud.h
src/lidar/dynamic_cloud/launch/: lidar.launch.py
src/lidar/dynamic_cloud/src/: dynamic_cloud.cpp
src/lidar/localization/src/: localization.cpp
src/livox_driver/livox_ros2_driver/config/: livox_lidar_config.json
src/livox_driver/livox_sdk_vendor/: CMakeLists.txt
src/tdt_vision/: CMakeLists.txt  package.xml
src/tdt_vision/calibrate/include/: calibrate.h
src/tdt_vision/calibrate/src/: calibrate.cpp
src/tdt_vision/detect/include/: detect.h
src/tdt_vision/detect/src/: detect.cpp
src/tdt_vision/infer/: CMakeLists.txt
src/tdt_vision/infer/include/: BaseInfer.hpp  InferTool.hpp  NvidiaInterface.hpp  classify.hpp  logging.h  yolos.hpp
src/tdt_vision/infer/src/: BaseInfer.cpp  InferTool.cu  NvidiaInterface.cu  classify.cu  yolo.cu
src/tdt_vision/launch/: calib_rosbag.launch.py  calibrate_radar.launch.py  map_server_launch.py  radar.launch.py  run_rosbag.launch.py
src/tdt_vision/maps/: map.yaml
src/tdt_vision/resolve/include/: resolve.h
src/tdt_vision/resolve/src/: resolve.cpp
src/tdt_vision/utils/: CMakeLists.txt
src/tdt_vision/utils/include/: radar_utils.h
src/tdt_vision/utils/src/: radar_utils.cpp
src/utils/rosbag_player/: package.xml  rosbag_player.cpp
